# nistmemsql

./: .gitignore  .gitmodules  .vibesqlrc.example  AGENT_COORDINATION.md  ANALYSIS_SELECT5_INVESTIGATION.md  ARCHITECTURAL_ANALYSIS.md  BENCHMARK_STATUS.md  BENCHMARK_STRATEGY.md  BFS_EFFECTIVENESS_ASSESSMENT.md  CHANGELOG.md  Cargo.toml  DECISIONS.md  DOGFOODING.md  FAILURE_ANALYSIS.md  INVESTIGATION.md  INVESTIGATION_2011.md  INVESTIGATION_NOTES.md  INVESTIGATION_REPORT_1689.md  INVESTIGATION_SUMMARY.md  INVESTIGATION_TIMEOUT_REGRESSION.md  ISSUE_1040_VERIFICATION.md  ISSUE_981_VERIFICATION.md  JIT_RESEARCH_FINDINGS.md  JOIN_REORDERING_SEARCH_PLAN.md  LESSONS_LEARNED.md  LICENSE-MIT  OPTIMIZATION.md  PARALLELISM_ROADMAP.md  PARALLELISM_STRATEGY.md  PERFORMANCE_ANALYSIS.md  PHASE_3_2_2_PROGRESS.md  PHASE_3_2_3_SEARCH_INTEGRATION_STATUS.md  PHASE_3_2_COMPLETION_SUMMARY.md  PHASE_3_2_SESSION_SUMMARY.md  PHASE_3_JOIN_OPTIMIZATION_PLAN.md  PREDICATE_PUSHDOWN_ROADMAP.md  PROBLEM_STATEMENT.md  PROFILING_SUMMARY.md  PUNCHLIST_README.md  Q3_PERFORMANCE_ANALYSIS.md  (+84 more)
crates/cli/: Cargo.toml  README.md
crates/cli/src/: commands.rs  config.rs  data_io.rs  error.rs  executor.rs  formatter.rs  main.rs  repl.rs  script.rs
crates/executor/: Cargo.toml
crates/executor/benches/: iterator_execution.rs
crates/executor/src/: advanced_objects.rs  alter.rs  constraint_validator.rs  create_table.rs  delete.rs  domain_ddl.rs  drop_table.rs  errors.rs  evaluator.rs  grant.rs  index_ddl.rs  insert.rs  lib.rs  limits.rs  privilege_checker.rs  revoke.rs  role_ddl.rs  schema.rs  schema_ddl.rs  select.rs  select_into.rs  tests.rs  transaction.rs  type_ddl.rs  update.rs
crates/executor/tests/: advanced_function_tests.rs  case_expression_tests.rs  column_names_tests.rs  conversion_function_tests.rs  date_arithmetic_tests.rs  date_time_function_tests.rs  delete_tests.rs  drop_table_tests.rs  drop_table_tests.rs.bak5  foreign_key_tests.rs  grant_tests.rs  having_subquery_tests.rs  having_subquery_tests.rs.bak5  index_ordering_tests.rs  insert_basic_tests.rs  insert_constraint_tests.rs  insert_default_tests.rs  insert_multi_row_tests.rs  insert_select_tests.rs  insert_tests.rs  parallel_execution_tests.rs  predicate_pushdown_tests.rs  role_tests.rs  scalar_function_tests.rs  string_edge_case_tests.rs  string_edge_cases.rs  string_function_tests.rs  string_tests.rs  test_join_ordering_search.rs  test_numeric_basic.rs  test_numeric_domain_range.rs  test_numeric_edge_cases.rs  test_numeric_exponential.rs  test_numeric_helpers.rs  test_numeric_precision.rs  test_numeric_rounding.rs  test_numeric_trigonometric.rs  test_numeric_type_coercion.rs  test_predicate_pushdown_integration.rs  timestamp_format_integration_tests.rs  (+7 more)
crates/python-bindings/: Cargo.toml
crates/python-bindings/src/: connection.rs  conversions.rs  cursor.rs  lib.rs  profiling.rs
crates/python-bindings/tests/: test_basic.py
crates/sqllogictest/: Cargo.toml
crates/sqllogictest/src/: error_handling.rs  executor.rs  lib.rs  output.rs  parser.rs  result_updater.rs  runner.rs
crates/vibesql-ast/: Cargo.toml  README.md
crates/vibesql-ast/src/: dml.rs  expression.rs  introspection.rs  lib.rs  operators.rs  revoke.rs  select.rs  statement.rs
crates/vibesql-ast/tests/: complex_expressions.rs  ddl.rs  expressions.rs  operators.rs  select_stmt.rs  statements.rs
crates/vibesql-catalog/: Cargo.toml  README.md
crates/vibesql-catalog/src/: advanced_objects.rs  case_sensitivity_tests.rs  column.rs  domain.rs  errors.rs  foreign_key.rs  index.rs  lib.rs  privilege.rs  schema.rs  table.rs  tests.rs  trigger.rs  type_definition.rs  view.rs
crates/vibesql-cli/: Cargo.toml  README.md
crates/vibesql-cli/src/: config.rs  data_io.rs  error.rs  formatter.rs  main.rs  repl.rs  script.rs
crates/vibesql-cli/tests/: persistence_test.rs
crates/vibesql-executor/: Cargo.toml  EVALUATOR_ARCHITECTURE.md  PHASE3_VECTORIZATION.md  README.md
crates/vibesql-executor/benches/: TPCH_README.md  columnar_execution.rs  hash_join_parallel.rs  iterator_execution.rs  parallel_sort.rs  q3_profiling.rs  q6_profiling.rs  spatial_index_benchmark.rs  tpch_benchmark.rs  tpch_profiling.rs
crates/vibesql-executor/src/: advanced_objects.rs  alter.rs  constraint_validator.rs  correlation.rs  create_table.rs  domain_ddl.rs  drop_table.rs  errors.rs  grant.rs  lib.rs  limits.rs  persistence.rs  privilege_checker.rs  profiling.rs  revoke.rs  role_ddl.rs  schema.rs  schema_ddl.rs  select_into.rs  transaction.rs  trigger_ddl.rs  trigger_execution.rs  truncate_table.rs  truncate_validation.rs  type_ddl.rs  view_ddl.rs
crates/vibesql-executor/tests/: case_expression_tests.rs  case_sensitivity_tests.rs  column_names_tests.rs  conversion_function_tests.rs  date_arithmetic_tests.rs  date_time_function_tests.rs  delete_tests.rs  drop_table_tests.rs  foreign_key_set_default_tests.rs  foreign_key_tests.rs  grant_tests.rs  having_subquery_tests.rs  index_ordering_tests.rs  insert_basic_tests.rs  insert_constraint_tests.rs  insert_default_tests.rs  insert_duplicate_key_update_tests.rs  insert_multi_row_tests.rs  insert_select_tests.rs  join_memory_test.rs  parallel_execution_tests.rs  predicate_pushdown_tests.rs  role_tests.rs  scalar_function_tests.rs  spatial_function_tests.rs  spatial_index_tests.rs  spatial_measurements_tests.rs  spatial_operations_tests.rs  spatial_set_operations_tests.rs  string_function_tests.rs  test_join_ordering_search.rs  test_predicate_pushdown_integration.rs  timestamp_format_integration_tests.rs  tpch_columnar_q1.rs  tpch_columnar_q6.rs  tpch_q15_cte_test.rs  tpch_q18_tests.rs  transaction_tests.rs  truncate_tests.rs  (+3 more)
crates/vibesql-parser/: Cargo.toml  README.md
crates/vibesql-python-bindings/: Cargo.toml  README.md
crates/vibesql-server/: Cargo.toml  OBSERVABILITY.md  README.md
crates/vibesql-sqllogictest/: Cargo.toml  MIGRATION_PLAN.md  README.md
crates/vibesql-storage/: Cargo.toml  README.md
crates/vibesql-types/: Cargo.toml  README.md
crates/vibesql-wasm-bindings/: Cargo.toml  README.md
crates/wasm-bindings/: Cargo.toml
(+2003 files in other folders)
