[package]
name = "nistmemsql"
version.workspace = true
edition.workspace = true

[dependencies]
types = { path = "crates/types" }
ast = { path = "crates/ast" }
catalog = { path = "crates/catalog" }
storage = { path = "crates/storage" }
executor = { path = "crates/executor" }
parser = { path = "crates/parser" }

[dev-dependencies]
regex = "1.10"
sqllogictest = "0.21"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
glob = "0.3"

[workspace]
members = [
    "crates/parser",
    "crates/types",
    "crates/ast",
    "crates/catalog",
    "crates/storage",
    "crates/executor",
    "crates/wasm-bindings",
    "crates/python-bindings",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["nistmemsql contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rjwalters/nistmemsql"

[workspace.dependencies]
# Will add dependencies as needed for each phase
pyo3 = { version = "0.20", features = ["extension-module"] }
