[package]
name = "vibesql"
version.workspace = true
edition.workspace = true

[dependencies]
types = { path = "crates/types" }
ast = { path = "crates/ast" }
catalog = { path = "crates/catalog" }
storage = { path = "crates/storage" }
executor = { path = "crates/executor" }
parser = { path = "crates/parser" }

[dev-dependencies]
regex = "1.10"
sqllogictest = "0.28"
async-trait = "0.1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
glob = "0.3"
md-5 = "0.10"
rusqlite = { version = "0.32", features = ["bundled"] }

[workspace]
members = [
    "crates/parser",
    "crates/types",
    "crates/ast",
    "crates/catalog",
    "crates/storage",
    "crates/executor",
    "crates/cli",
    "crates/wasm-bindings",
    "crates/python-bindings",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["vibesql contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/rjwalters/vibesql"

[workspace.dependencies]
# Will add dependencies as needed for each phase
pyo3 = { version = "0.27", features = ["extension-module"] }

[[test]]
name = "sqllogictest_suite"
path = "tests/sqllogictest_suite.rs"
harness = false

[[test]]
name = "e2e_data_types"
path = "tests/e2e_data_types/mod.rs"

[[test]]
name = "test_revoke_nonexistent"
path = "tests/test_revoke_nonexistent.rs"
