[package]
name = "cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vibesql"
path = "src/main.rs"

[dependencies]
# Core VibeSQL crates
types = { path = "../types" }
ast = { path = "../ast" }
catalog = { path = "../catalog" }
storage = { path = "../storage" }
executor = { path = "../executor" }
parser = { path = "../parser" }

# CLI dependencies
clap = { version = "4", features = ["derive"] }
rustyline = "13"
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
atty = "0.2"

[dev-dependencies]
