[package]
name = "executor"
version.workspace = true
edition.workspace = true

[dependencies]
types = { path = "../types" }
ast = { path = "../ast" }
catalog = { path = "../catalog" }
storage = { path = "../storage" }
chrono = "0.4"

[dev-dependencies]
parser = { path = "../parser" }

[[test]]
name = "foreign_key_tests"
path = "tests/foreign_key_tests.rs"

[[test]]
name = "having_subquery_tests"
path = "tests/having_subquery_tests.rs"

[[test]]
name = "delete_tests"
path = "tests/delete_tests.rs"
