[package]
name = "executor"
version.workspace = true
edition.workspace = true

[dependencies]
types = { path = "../types" }
ast = { path = "../ast" }
catalog = { path = "../catalog" }
storage = { path = "../storage" }
chrono = "0.4"

[dev-dependencies]
parser = { path = "../parser" }

[[test]]
name = "foreign_key_tests"
path = "tests/foreign_key_tests.rs"

[[test]]
name = "having_subquery_tests"
path = "tests/having_subquery_tests.rs"

[[test]]
name = "delete_tests"
path = "tests/delete_tests.rs"

[[test]]
name = "conversion_function_tests"
path = "tests/conversion_function_tests.rs"

[[test]]
name = "test_numeric_edge_cases"
path = "tests/test_numeric_edge_cases.rs"

[[test]]
name = "string_tests"
path = "tests/string_tests.rs"

[[test]]
name = "date_arithmetic_tests"
path = "tests/date_arithmetic_tests.rs"
