[package]
name = "executor"
version.workspace = true
edition.workspace = true

[dependencies]
types = { path = "../types" }
ast = { path = "../ast" }
catalog = { path = "../catalog" }
storage = { path = "../storage" }
chrono = "0.4"
rayon = "1.10"
indexmap = "2.0"

[dev-dependencies]
parser = { path = "../parser" }
criterion = { version = "0.5", features = ["html_reports"] }

[[test]]
name = "foreign_key_tests"
path = "tests/foreign_key_tests.rs"

[[test]]
name = "having_subquery_tests"
path = "tests/having_subquery_tests.rs"

[[test]]
name = "delete_tests"
path = "tests/delete_tests.rs"

[[test]]
name = "conversion_function_tests"
path = "tests/conversion_function_tests.rs"

[[test]]
name = "test_numeric_edge_cases"
path = "tests/test_numeric_edge_cases.rs"

[[test]]
name = "date_arithmetic_tests"
path = "tests/date_arithmetic_tests.rs"

[[test]]
name = "string_edge_case_tests"
path = "tests/string_edge_case_tests.rs"

[[test]]
name = "predicate_pushdown_tests"
path = "tests/predicate_pushdown_tests.rs"

[[bench]]
name = "iterator_execution"
harness = false
