[package]
name = "nistmemsql-py"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "nistmemsql"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true }
lru = "0.12"
parking_lot = "0.12"

# Internal crates
types = { path = "../types" }
ast = { path = "../ast" }
parser = { path = "../parser" }
executor = { path = "../executor" }
storage = { path = "../storage" }
catalog = { path = "../catalog" }
