[package]
name = "sqllogictest"
version = "0.28.4"
edition = "2021"
homepage = "https://github.com/risinglightdb/sqllogictest-rs"
keywords = ["sql", "database", "parser", "cli"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/risinglightdb/sqllogictest-rs"
description = "Sqllogictest parser and runner."

[dependencies]
async-trait = "0.1"
educe = "0.6"
fs-err = "3"
futures = "0.3"
glob = "0.3"
humantime = "2"
itertools = "0.13"
libtest-mimic = "0.8"
md-5 = "0.10"
owo-colors = "4"
regex = "1"
similar = "2"
subst = "0.3"
tempfile = "3"
thiserror = "2"
tracing = "0.1"
rand = "0.8.5"

[dev-dependencies]
pretty_assertions = "1"
