[package]
name = "vibesql-ast"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Abstract Syntax Tree definitions for vibesql SQL parser"
keywords = ["sql", "parser", "ast"]
categories = ["database", "parser-implementations"]

[dependencies]
vibesql-types = { version = "0.1.0", path = "../vibesql-types" }

[dev-dependencies]
