[package]
name = "vibesql-catalog"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Schema catalog management for vibesql SQL database"
keywords = ["sql", "database", "catalog", "schema"]
categories = ["database"]

[dependencies]
vibesql-types = { path = "../vibesql-types" }
vibesql-ast = { path = "../vibesql-ast" }

[dev-dependencies]
