[package]
name = "vibesql-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for vibesql SQL database"
keywords = ["sql", "database", "cli"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "vibesql"
path = "src/main.rs"

[dependencies]
# Core VibeSQL crates
vibesql-types = { path = "../vibesql-types" }
vibesql-ast = { path = "../vibesql-ast" }
vibesql-catalog = { path = "../vibesql-catalog" }
vibesql-storage = { path = "../vibesql-storage" }
vibesql-executor = { path = "../vibesql-executor" }
vibesql-parser = { path = "../vibesql-parser" }

# CLI dependencies
clap = { version = "4", features = ["derive"] }
rustyline = "13"
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
atty = "0.2"
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
