[package]
name = "vibesql-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for vibesql SQL database"
keywords = ["sql", "database", "cli"]
categories = ["database", "command-line-utilities"]

[[bin]]
name = "vibesql"
path = "src/main.rs"

[dependencies]
# Core VibeSQL crates
vibesql-types = { version = "0.1.0", path = "../vibesql-types" }
vibesql-ast = { version = "0.1.0", path = "../vibesql-ast" }
vibesql-catalog = { version = "0.1.0", path = "../vibesql-catalog" }
vibesql-storage = { version = "0.1.0", path = "../vibesql-storage" }
vibesql-executor = { version = "0.1.0", path = "../vibesql-executor" }
vibesql-parser = { version = "0.1.0", path = "../vibesql-parser" }

# CLI dependencies
clap = { version = "4", features = ["derive"] }
rustyline = "13"
prettytable-rs = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
anyhow = "1.0"
atty = "0.2"
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tempfile = "3"
