[package]
name = "vibesql-executor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Query execution engine for vibesql SQL database"
keywords = ["sql", "database", "executor", "query"]
categories = ["database"]

[dependencies]
vibesql-types = { version = "0.1.0", path = "../vibesql-types" }
vibesql-ast = { version = "0.1.0", path = "../vibesql-ast" }
vibesql-catalog = { version = "0.1.0", path = "../vibesql-catalog" }
vibesql-storage = { version = "0.1.0", path = "../vibesql-storage" }
vibesql-parser = { version = "0.1.0", path = "../vibesql-parser" }
chrono = "0.4"
rayon = "1.10"
indexmap = "2.0"
hex = "0.4"
geo = "0.28"
wkt = "0.10"
rstar = "0.12"

[dev-dependencies]
vibesql-parser = { version = "0.1.0", path = "../vibesql-parser" }
criterion = { version = "0.5", features = ["html_reports"] }
rusqlite = { version = "0.32", features = ["bundled"] }
duckdb = { version = "1.1", features = ["bundled"] }
rand = "0.8"
rand_chacha = "0.3"
rust_decimal = "1.33"

[[test]]
name = "foreign_key_tests"
path = "tests/foreign_key_tests.rs"

[[test]]
name = "having_subquery_tests"
path = "tests/having_subquery_tests.rs"

[[test]]
name = "delete_tests"
path = "tests/delete_tests.rs"

[[test]]
name = "conversion_function_tests"
path = "tests/conversion_function_tests.rs"

[[test]]
name = "test_numeric_edge_cases"
path = "tests/test_numeric_edge_cases.rs"

[[test]]
name = "date_arithmetic_tests"
path = "tests/date_arithmetic_tests.rs"

[[test]]
name = "string_edge_case_tests"
path = "tests/string_edge_case_tests.rs"

[[test]]
name = "predicate_pushdown_tests"
path = "tests/predicate_pushdown_tests.rs"

[[test]]
name = "spatial_function_tests"
path = "tests/spatial_function_tests.rs"

[[bench]]
name = "iterator_execution"
harness = false

[[bench]]
name = "spatial_index_benchmark"
harness = false

[[bench]]
name = "tpch_benchmark"
harness = false
