[package]
name = "vibesql-parser"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "SQL parser for vibesql database engine"
keywords = ["sql", "parser", "database"]
categories = ["database", "parser-implementations"]

[dependencies]
vibesql-ast = { version = "0.1.0", path = "../vibesql-ast" }
vibesql-types = { version = "0.1.0", path = "../vibesql-types" }

[dev-dependencies]
