[package]
name = "vibesql-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage engine for vibesql SQL database"
keywords = ["sql", "database", "storage"]
categories = ["database"]

[dependencies]
vibesql-types = { version = "0.1.0", path = "../vibesql-types" }
vibesql-catalog = { version = "0.1.0", path = "../vibesql-catalog" }
vibesql-ast = { version = "0.1.0", path = "../vibesql-ast" }
chrono = "0.4"
zstd = "0.13"

[dev-dependencies]
vibesql-parser = { version = "0.1.0", path = "../vibesql-parser" }
