[package]
name = "vibesql-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage engine for vibesql SQL database"
keywords = ["sql", "database", "storage"]
categories = ["database"]

[dependencies]
vibesql-types = { version = "0.1.0", path = "../vibesql-types" }
vibesql-catalog = { version = "0.1.0", path = "../vibesql-catalog" }
vibesql-ast = { version = "0.1.0", path = "../vibesql-ast" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = "0.13"
rstar = "0.12"

[dev-dependencies]
vibesql-parser = { version = "0.1.0", path = "../vibesql-parser" }
