[package]
name = "vibesql-storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Storage engine for vibesql SQL database"
keywords = ["sql", "database", "storage"]
categories = ["database"]

[features]
default = ["compression"]
# zstd compression for binary persistence (disabled in WASM where browsers provide compression)
compression = ["zstd"]

[dependencies]
vibesql-types = { version = "0.1.0", path = "../vibesql-types" }
vibesql-catalog = { version = "0.1.0", path = "../vibesql-catalog" }
vibesql-ast = { version = "0.1.0", path = "../vibesql-ast" }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = { version = "0.13", optional = true }
rstar = "0.12"
lru = "0.12"
log = "0.4"
rand = "0.8"  # For statistical sampling (Phase 5.2)
instant = { version = "0.1", features = ["wasm-bindgen"] }  # WASM-compatible time primitives

# Use parking_lot for native builds, std::sync for WASM
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parking_lot = "0.12"

# WASM-specific dependencies for browser storage
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "File",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemWritableFileStream",
    "FileSystemSyncAccessHandle",
    "FileSystemGetFileOptions",
    "StorageManager",
    "Navigator",
    "Window",
    "Blob",
] }

[dev-dependencies]
vibesql-parser = { version = "0.1.0", path = "../vibesql-parser" }
tempfile = "3.8"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"
