[package]
name = "vibesql-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Type system for vibesql SQL database engine"
keywords = ["sql", "database", "types"]
categories = ["database"]

[dependencies]

[dev-dependencies]
