[package]
name = "vibesql-wasm-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for vibesql SQL database"
keywords = ["sql", "database", "wasm", "webassembly"]
categories = ["database", "wasm"]

[lib]
name = "vibesql_wasm"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# Internal crates
vibesql-types = { path = "../vibesql-types" }
vibesql-ast = { path = "../vibesql-ast" }
vibesql-parser = { path = "../vibesql-parser" }
vibesql-executor = { path = "../vibesql-executor" }
vibesql-storage = { path = "../vibesql-storage" }
vibesql-catalog = { path = "../vibesql-catalog" }
