[package]
name = "vibesql-wasm-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for vibesql SQL database"
keywords = ["sql", "database", "wasm", "webassembly"]
categories = ["database", "wasm"]

[lib]
name = "vibesql_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# Internal crates
vibesql-types = { version = "0.1.0", path = "../vibesql-types" }
vibesql-ast = { version = "0.1.0", path = "../vibesql-ast" }
vibesql-parser = { version = "0.1.0", path = "../vibesql-parser" }
vibesql-executor = { version = "0.1.0", path = "../vibesql-executor" }
vibesql-storage = { version = "0.1.0", path = "../vibesql-storage" }
vibesql-catalog = { version = "0.1.0", path = "../vibesql-catalog" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals"]
