[package]
name = "vibesql-wasm-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for vibesql SQL database"
keywords = ["sql", "database", "wasm", "webassembly"]
categories = ["database", "wasm"]

[lib]
name = "vibesql_wasm"
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }

# Internal crates
# Disable heavy features for WASM to reduce binary size:
# - parallel: Single-threaded WASM doesn't benefit from rayon
# - spatial: Reduces ~400-600 KB by excluding geo/wkt/rstar
# - compression: Reduces ~200-300 KB by excluding zstd (browsers have native compression)
vibesql-types = { version = "0.1.0", path = "../vibesql-types" }
vibesql-ast = { version = "0.1.0", path = "../vibesql-ast" }
vibesql-parser = { version = "0.1.0", path = "../vibesql-parser" }
vibesql-executor = { version = "0.1.0", path = "../vibesql-executor", default-features = false }
vibesql-storage = { version = "0.1.0", path = "../vibesql-storage", default-features = false }
vibesql-catalog = { version = "0.1.0", path = "../vibesql-catalog" }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O4",
    "--enable-mutable-globals",
    "--enable-bulk-memory",
    "--enable-nontrapping-float-to-int",
    "--enable-sign-ext"
]
