[package]
name = "wasm-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "nistmemsql_wasm"
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
console_error_panic_hook = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0"

# Internal crates
types = { path = "../types" }
ast = { path = "../ast" }
parser = { path = "../parser" }
executor = { path = "../executor" }
storage = { path = "../storage" }
catalog = { path = "../catalog" }
